Compatibility for macOS and fix issue of metadata loading indefinitely